--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,32 @@
   align-items: center;
   justify-content: center; }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+body {
+  background-color: #ff4800; }
+
+::-webkit-scrollbar {
+  width: 0.7em; }
+
+::-webkit-scrollbar-track {
+  background: black; }
+
+::-webkit-scrollbar-thumb {
+  background: gold; }
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; }
+
 /*HEADER*/
+.footer .footer-content, .footer .footer-content .socials, .main-index .main-section-index .section-img-1, .main-index .main-section-index .section-img-2, .main-index .main-section-index .section-img-3, .main-menu h1, .main-menu .menu-grid-container .grid-item, .main-sucursales h1, .main-sucursales .contenedor-mapas, .main-nosotros h1, .main-nosotros .grid-nosotros .grid-item-text, .main-nosotros .grid-nosotros .grid-item, .main-giftcards h1 {
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
 header nav {
   background-color: gold; }
   header nav div a .logo-header-a {
@@ -23,6 +48,7 @@ header nav {
       color: red;
       transform: scale(1.3); }
 
+/*FOOTER*/
 .footer .footer-content, .footer .footer-content .socials, .main-index .main-section-index .section-img-1, .main-index .main-section-index .section-img-2, .main-index .main-section-index .section-img-3, .main-menu h1, .main-menu .menu-grid-container .grid-item, .main-sucursales h1, .main-sucursales .contenedor-mapas, .main-nosotros h1, .main-nosotros .grid-nosotros .grid-item-text, .main-nosotros .grid-nosotros .grid-item, .main-giftcards h1 {
   display: flex;
   align-items: center;
@@ -64,26 +90,6 @@ header nav {
       font-size: 14px;
       word-spacing: 2px;
       text-transform: capitalize; }
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box; }
-
-body {
-  background-color: #ff4800; }
-
-::-webkit-scrollbar {
-  width: 0.7em; }
-
-::-webkit-scrollbar-track {
-  background: black; }
-
-::-webkit-scrollbar-thumb {
-  background: gold; }
-
-::-webkit-scrollbar-thumb:hover {
-  background: #555; }
 
 /*INDEX*/
 .footer .footer-content, .footer .footer-content .socials, .main-index .main-section-index .section-img-1, .main-index .main-section-index .section-img-2, .main-index .main-section-index .section-img-3, .main-menu h1, .main-menu .menu-grid-container .grid-item, .main-sucursales h1, .main-sucursales .contenedor-mapas, .main-nosotros h1, .main-nosotros .grid-nosotros .grid-item-text, .main-nosotros .grid-nosotros .grid-item, .main-giftcards h1 {
@@ -299,24 +305,28 @@ body {
       @media screen and (min-width: 1200px) {
         .main-nosotros .grid-nosotros .grid-item-text {
           height: 15em; } }
-      @media screen and (min-width: 768px) {
-        .main-nosotros .grid-nosotros .grid-item-text h2 {
-          font-size: xx-large; } }
-      @media screen and (min-width: 992px) {
-        .main-nosotros .grid-nosotros .grid-item-text h2 {
-          font-size: 2.3em; } }
-      @media screen and (min-width: 1200px) {
-        .main-nosotros .grid-nosotros .grid-item-text h2 {
-          font-size: 2.5em; } }
-      @media screen and (min-width: 768px) {
-        .main-nosotros .grid-nosotros .grid-item-text p {
-          font-size: x-large; } }
-      @media screen and (min-width: 992px) {
-        .main-nosotros .grid-nosotros .grid-item-text p {
-          font-size: xx-large; } }
-      @media screen and (min-width: 1200px) {
-        .main-nosotros .grid-nosotros .grid-item-text p {
-          font-size: 2.1em; } }
+      .main-nosotros .grid-nosotros .grid-item-text h2 {
+        color: black; }
+        @media screen and (min-width: 768px) {
+          .main-nosotros .grid-nosotros .grid-item-text h2 {
+            font-size: xx-large; } }
+        @media screen and (min-width: 992px) {
+          .main-nosotros .grid-nosotros .grid-item-text h2 {
+            font-size: 2.3em; } }
+        @media screen and (min-width: 1200px) {
+          .main-nosotros .grid-nosotros .grid-item-text h2 {
+            font-size: 2.5em; } }
+      .main-nosotros .grid-nosotros .grid-item-text p {
+        color: black; }
+        @media screen and (min-width: 768px) {
+          .main-nosotros .grid-nosotros .grid-item-text p {
+            font-size: x-large; } }
+        @media screen and (min-width: 992px) {
+          .main-nosotros .grid-nosotros .grid-item-text p {
+            font-size: xx-large; } }
+        @media screen and (min-width: 1200px) {
+          .main-nosotros .grid-nosotros .grid-item-text p {
+            font-size: 2.1em; } }
     .main-nosotros .grid-nosotros .grid-item {
       height: 1fr;
       flex-direction: column;
@@ -325,24 +335,28 @@ body {
       @media screen and (min-width: 768px) {
         .main-nosotros .grid-nosotros .grid-item {
           flex-direction: row; } }
-      @media screen and (min-width: 768px) {
-        .main-nosotros .grid-nosotros .grid-item div h2 {
-          font-size: xx-large; } }
-      @media screen and (min-width: 992px) {
-        .main-nosotros .grid-nosotros .grid-item div h2 {
-          font-size: 2.3em; } }
-      @media screen and (min-width: 1200px) {
-        .main-nosotros .grid-nosotros .grid-item div h2 {
-          font-size: 2.5em; } }
-      @media screen and (min-width: 768px) {
-        .main-nosotros .grid-nosotros .grid-item div p {
-          font-size: x-large; } }
-      @media screen and (min-width: 992px) {
-        .main-nosotros .grid-nosotros .grid-item div p {
-          font-size: xx-large; } }
-      @media screen and (min-width: 1200px) {
-        .main-nosotros .grid-nosotros .grid-item div p {
-          font-size: 2.1em; } }
+      .main-nosotros .grid-nosotros .grid-item div h2 {
+        color: black; }
+        @media screen and (min-width: 768px) {
+          .main-nosotros .grid-nosotros .grid-item div h2 {
+            font-size: xx-large; } }
+        @media screen and (min-width: 992px) {
+          .main-nosotros .grid-nosotros .grid-item div h2 {
+            font-size: 2.3em; } }
+        @media screen and (min-width: 1200px) {
+          .main-nosotros .grid-nosotros .grid-item div h2 {
+            font-size: 2.5em; } }
+      .main-nosotros .grid-nosotros .grid-item div p {
+        color: black; }
+        @media screen and (min-width: 768px) {
+          .main-nosotros .grid-nosotros .grid-item div p {
+            font-size: x-large; } }
+        @media screen and (min-width: 992px) {
+          .main-nosotros .grid-nosotros .grid-item div p {
+            font-size: xx-large; } }
+        @media screen and (min-width: 1200px) {
+          .main-nosotros .grid-nosotros .grid-item div p {
+            font-size: 2.1em; } }
       .main-nosotros .grid-nosotros .grid-item img {
         width: 100%;
         height: 100%; }
