--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,6 @@
-@import 'components/header';
-@import 'components/footer';
-
+@import 'base/extends';
+@import 'base/listas';
+@import 'base/mixins';
 
 *{
     margin: 0;
@@ -25,6 +25,10 @@ body{
 ::-webkit-scrollbar-thumb:hover{
     background: #555;
 }
+/*HEADER*/
+@import 'components/header';
+/*FOOTER*/
+@import 'components/footer';
 /*INDEX*/
 @import 'components/mainindex';
 /*MENU*/
