--- a/scss/components/_mainmenu.scss
+++ b/scss/components/_mainmenu.scss
@@ -3,7 +3,8 @@
 @import '../base/listas';
 
 .main-menu{
-    background-color: nth($list: $colores, $n:6 );
+    background: nth($list: $colores, $n:6 );
+    background: linear-gradient(90deg, rgb(105, 40, 18) 0%, nth($list: $colores, $n:6 ) 34%, rgba(208,23,23,1) 100%, rgba(121,65,9,1) 100%, rgba(255,0,0,1) 100%);
     h1{
         height: 4em;
         @extend %dflex;
@@ -12,7 +13,6 @@
     }
     .menu-grid-container{
         min-height: 80vh;
-        margin: 2em auto;
         display: grid;
         grid-template-columns: 100%;
         grid-template-rows: repeat(9,1fr);
