--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -14,6 +14,10 @@
                 height: 2.5em;
                 width: 2.5em;
                 margin-left: 1em;
+                &:hover{
+                    transform: scale(1.2);
+                    transition: all 1.5s;
+                }
             }
         }
         p{
