--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,7 @@ header nav {
   justify-content: center; }
 
 .main-sucursales {
-  background: rgba(0, 0, 0, 0.2) url(../../imagenes/bandera-argentina-encima-de-la-hamburguesa-aislada-en-negro-96932091.webp);
+  background: rgba(0, 0, 0, 0.2) url(../../imagenes/fondosucur.webp);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
