--- a/scss/components/_mainsucursales.scss
+++ b/scss/components/_mainsucursales.scss
@@ -3,7 +3,7 @@
 @import '../base/listas';
 
 .main-sucursales{
-    background: rgba(0,0,0,0.2) url(../../imagenes/bandera-argentina-encima-de-la-hamburguesa-aislada-en-negro-96932091.webp);
+    background: rgba(0,0,0,0.2) url(../../imagenes/fondosucur.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
